added about page contents

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,1 +1,16 @@
 index.main.callout=Bootstrap starter template
+index.basic.membership=Basic Membership
+index.basic.signup.button=Sign up with basic
+index.h1.text=Welcome to Devops Buddy
+index.h4.basic.membership=Signup for free and get basic acess to Devops buddy
+index.h4.pro.membership=Signup for the pro account for $18/month and get full acces to De
+index.p.lead=This is the Devops buddy landing page
+index.pro.membership=Pro Membership
+navbar.about.text=About
+navbar.home.text=Home
+
+
+#This is copy section
+
+copy.h1.text=who are we
+copy.p.lead=Triptika Technologies is a software products and services company focused on creating powerful and intelligent enterprises through deep data awareness, data integration and advanced data analytics. Our products and services are designed to empower the real-time data driven enterprise to help our clients win in the modern world of digital transformation.
